--- a/style.css
+++ b/style.css
@@ -14,19 +14,9 @@ h2 {
 
 h3 {
     color: blue;
-    border: 3px solid blue;
-    border-radius: 20px;
+    border: 3px solid black;
 }
 
-a:link, a:visited {
-  background-color: #f44336;
-  color: white;
-  padding: 15px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
+table, th, td {
+  border: 1px solid black;
 }
